Adding link back to home page from the dashboards

--- a/dashboards.Rmd
+++ b/dashboards.Rmd
@@ -35,6 +35,7 @@ ny_noaa =
 ```
 
 **NOTE**: Weather data was pulled from the NOAA National Climatic Data Center.
+Link back to [Home Page](index.html)
 
 Column {data-width=650}
 -----------------------------------------------------------------------
